changed in .env file

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NEXTAUTH_URL = http://localhost:3000
 NEXTAUTH_SECRET = U6pAtX+B6vBbE1BeitkEJfMM5fZkHBTkAgu3wpJmhAg=
 FIREBASE = AIzaSyBB1u4BF3MdZDK0O8jkPCOvCT9VW2rqIFE
 DATABASE_URL=mongodb+srv://AbhishekSoni:Mongodb1234@cluster0.oiqd2te.mongodb.net/blog?retryWrites=true&w=majority
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
